# circuit-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
doc/: README.md
examples/: example_1.txt  example_2.txt  example_3.txt
include/: MNAsolver.hpp  ac_current_source.hpp  ac_voltage_source.hpp  active_component.hpp  capacitor.hpp  circuit.hpp  circuit_simulator_gui.hpp  component.hpp  current_source.hpp  dc_current_source.hpp  dc_voltage_source.hpp  inductor.hpp  node.hpp  passive_component.hpp  read_file.hpp  resistor.hpp  save_and_load.hpp  voltage_source.hpp
include/gui_components/: gui_capacitor.hpp  gui_component.hpp  gui_current_source.hpp  gui_ground.hpp  gui_inductor.hpp  gui_resistor.hpp  gui_voltage_source.hpp  gui_wire.hpp
src/: CMakeLists.txt  Install.cmake  MNAsolver.cpp  ac_current_source.cpp  ac_voltage_source.cpp  active_component.cpp  capacitor.cpp  circuit.cpp  circuit_simulator_gui.cpp  component.cpp  dc_current_source.cpp  dc_voltage_source.cpp  inductor.cpp  main.cpp  node.cpp  node.hpp  passive_component.cpp  read_file.cpp  resistor.cpp  save_and_load.cpp  voltage_source.cpp
src/gui_components/: gui_capacitor.cpp  gui_component.cpp  gui_current_source.cpp  gui_ground.cpp  gui_inductor.cpp  gui_resistor.cpp  gui_voltage_source.cpp  gui_wire.cpp
tests/: CMakeLists.txt  test1.cpp  test_MNAsolver.cpp  test_admittance.cpp  test_circuit.cpp  test_load_file.cpp  test_main.cpp  test_read_file.cpp  test_save_file.cpp
tests/netlists/: netlist_bad.txt  netlist_good.txt  netlist_invalid_type.txt
